fix: html & body overflow

--- a/styles/html.css
+++ b/styles/html.css
@@ -1,3 +1,7 @@
+html,body {
+    width: 100%;
+    overflow-x: hidden;
+}
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
